# nmbs

./: CMakeLists.txt  CMakePresets.json  README.md  TASKS  annotated.html  binding_8h.html  binding_8h_source.html  c_2nmbs_8h.html  c_2nmbs_8h_source.html  classes.html  classnmbs_1_1Error-members.html  classnmbs_1_1Error.html  classnmbs_1_1exception-members.html  classnmbs_1_1exception.html  classnmbs_1_1exceptions_1_1file__not__found__exception-members.html  classnmbs_1_1exceptions_1_1file__not__found__exception.html  classnmbs_1_1exceptions_1_1xml__could__not__create__xpath__context__exception-members.html  classnmbs_1_1exceptions_1_1xml__could__not__create__xpath__context__exception.html  classnmbs_1_1exceptions_1_1xml__could__not__parse__exception-members.html  classnmbs_1_1exceptions_1_1xml__could__not__parse__exception.html  classnmbs_1_1exceptions_1_1xmp__key__not__found__exception-members.html  classnmbs_1_1exceptions_1_1xmp__key__not__found__exception.html  classnmbs_1_1exceptions_1_1xmp__not__found__exception-members.html  classnmbs_1_1exceptions_1_1xmp__not__found__exception.html  confidentiality__label_8h.html  confidentiality__label_8h_source.html  constants_8h.html  constants_8h_source.html  dir_44d01498dbc25e7b04a216e185a169af.html  dir_70c8b42ef04a7de60476e271ac0f3795.html  dir_9f703a10b1571b11d041fbe5bd39f7b1.html  dir_e68e8157741866f444e17edd764ebbae.html  exception_8h.html  exception_8h_source.html  exceptions_8h.html  exceptions_8h_source.html  exit__code_8h.html  exit__code_8h_source.html  expected_8h.html  expected_8h_source.html  (+70 more)
.github/workflows/: ci.yml
debian/: changelog  control  copyright  libnmbs-dev.install  libnmbs1.install  libnmbs1.sharedmimeinfo  nmbs.install
resources/: 20140916_PU_PUBLIC Security Policy-v1.spif  binding-information.xsd  confidentiality-metadata-label.xsd
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_13.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_4.js  classes_5.js  classes_7.js  defines_0.js  enums_0.js  enums_1.js  enums_2.js  enums_3.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  enumvalues_3.js  enumvalues_4.js  enumvalues_5.js  enumvalues_6.js  enumvalues_7.js  files_1.js  files_3.js  (+37 more)
targets/: CMakeLists.txt  Config.cmake.in
targets/NMBS-CLI/: CMakeLists.txt
targets/NMBS-CLI/src/: nmbs-canonicalize.cpp  nmbs-confidentiality-label.cpp  nmbs-xmp.cpp
targets/NMBS-Get-XMP/src/: nmbs-get-xmp.cpp
targets/NMBS-LIB/: CMakeLists.txt
targets/NMBS-LIB/include/nmbs/: nmbs.h
targets/NMBS-LIB/src/: nmbs.cpp  version.h.in
targets/NMBS-Library/: CMakeLists.txt
targets/NMBS-Library/doc/: index.md  requirements.dox
targets/NMBS-Library/include/nmbs/: binding.h  confidentiality_label.h  constants.h  exception.h  exceptions.h  exit_code.h  nmbs.h  spif.h
targets/NMBS-Library/include/nmbs/c/: nmbs.h
targets/NMBS-Library/include/private/nmbs/: binding.h  constants.h  nmbs_private.h  spif.h
targets/NMBS-Library/include/public/nmbs/: confidentiality_label.h  exit_code.h  expected.h  nmbs.h  nmbs_c.h
targets/NMBS-Library/resources/: 20140916_PU_PUBLIC Security Policy-v1.spif  20210506_PU_NATO Security Policy-v88.spif  xmlspif.xsd
targets/NMBS-Library/resources/xml/schema/: nl-mb.xsd  xmlspif.xsd
targets/NMBS-Library/resources/xml/spif/: 20140916_PU_PUBLIC Security Policy-v1.spif  20210506_PU_NATO Security Policy-v88.spif
targets/NMBS-Library/src/: nmbs.cpp  nmbs_c.cpp  nmbs_private.h  xml_c.cpp
targets/NMBS-Nautilus/src/: nmbs-nautilus.c  org.gnome.nautilus-nmbs.gschema.xml
targets/NMBS-Set/: CMakeLists.txt
targets/NMBS-Set-XMP/: CMakeLists.txt
targets/NMBS-Set-XMP/src/: nmbs-set-xmp.cpp
targets/NMBS-Set/src/: nmbs-set.cpp
targets/NMBS-Tests/: CMakeLists.txt
targets/NMBS-Tests/resources/spif/: NATO.spif  PUBLIC.spif
targets/NMBS-Tests/resources/xml/: test.1.bdo
targets/NMBS-Tests/src/nmbs/: Basic.tests.cpp  basic.tests.cpp  http.tests.cpp  spif.tests.cpp  test.h  xml.tests.cpp
targets/NMBS-Tests/src/nmbs/confidentiality_label/: confidentiality_label_c.tests.cpp
targets/NMBS-Verify/: CMakeLists.txt
targets/NMBS-Verify/src/: nmbs-verify.cpp
xsd/: confidentiality-metadata-label.xsd
